src/test/deca/context/invalid/new-wrongClass.deca
class Sasuke {}
class Naruto {

    int newUzumaki() {
        Naruto Uzumaki = new Sasuke();
        return 18;
    }
}
{}
